Beta Grow-Treino

--- a/htmls/index.html
+++ b/htmls/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/principal.css">
     <link rel="stylesheet" href="../fonts/fontes.css">
+    <link rel="stylesheet" href="../styles/explore/contact.css">
     <link rel="stylesheet" href="../styles/explore/avaliaçao.css">
+    <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/explore/explore.css">
     <link rel="shortcut icon" href="../Img/Logo1-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="../javascript/script.js">
@@ -46,7 +48,7 @@
                 <h1 class="title1">Ajuda para o seu condicionamento<br> físico ideal</h1>
                 <p class="pagrag1">Motive os usuários com benefícios e reforço positivo e  <br>ofereça modificações e acompanhamento do progresso.</p>
                 <a href="explore.html">
-                    <h2 class="button2">Start Training</h2>
+                    <h2 class="button2" id="bnt2">Start Training/h2>
                 </a>
             </div>
 
@@ -59,5 +61,6 @@
         
 
     </main>
+    
     <script src="../javascript/script.js"></script>
 </html>
