--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ http://127.0.0.1:3000/index.html
                 <li><a href="#">Comunidade</a></li>
             </ul>
             
-            <a href="#" class="button1">Login</a>
-            <a href="#" class="button2">Register</a>
+            <a href="#" class="button1">Sigh In</a>
+            <a href="#" class="button2">Sigh Up</a>
             
            </nav>
     </header>
@@ -48,7 +48,7 @@ http://127.0.0.1:3000/index.html
                 <h1 class="title1">Ajuda para o seu condicionamento<br> físico ideal</h1>
                 <p class="pagrag1">Motive os usuários com benefícios e reforço positivo e  <br>ofereça modificações e acompanhamento do progresso.</p>
                 <a href="htmls/explore.html">
-                    <h2 class="button2" id="bnt2">Start Training</h2>
+                    <h2 class="button2" id="bnt2">Começar Treino</h2>
                 </a>
             </div>
 
