--- a/htmls/força.html
+++ b/htmls/força.html
@@ -34,8 +34,8 @@
                 <li><a href="#">Comunidade</a></li>
             </ul>
             
-            <a href="#" class="button1">Sigh In</a>
-            <a href="#" class="button2">Sigh Up</a>
+            <a href="login.html" class="button1">Sigh In</a>
+            <a href="login.html" class="button2">Sigh Up</a>
 
            </nav>
     </header>
