--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ http://127.0.0.1:3000/index.html
     <header>
         <figure id="logo">
             
-                <img src="../Grow-Treino/Img/Logo1-removebg-preview.png" alt="Logo Do Site" style="width: 100px;" >
+                <img src="Img/Logo1-removebg-preview.png" alt="Logo Do Site" style="width: 100px;" >
         </figure>
 
     <nav>
