--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@ http://127.0.0.1:3000/index.html
     <link rel="stylesheet" href="styles/explore/avaliaçao.css">
     <link rel="shortcut icon" href="../Img/Logo1-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="../javascript/script.js">
-    
+    <style>
+        body{
+            overflow-y: hidden;
+        }
+    </style>
 <body>
     <header>
         <figure id="logo">
