--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-http://127.0.0.1:3000/index.html
-</body>
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -28,7 +27,7 @@ http://127.0.0.1:3000/index.html
                 <img src="Img/Logo1-removebg-preview.png" alt="Logo Do Site" style="width: 100px;" >
         </figure>
 
-         <nav>
+         <nav>ddad
                     
             <ul class="nav-bar">
                 <li><a href="index.html">Início<span></span></a></li>
