--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="Img/Logo1-removebg-preview.png" alt="Logo Do Site" style="width: 100px;" >
         </figure>
 
-         <nav>ddad
+         <nav>
                     
             <ul class="nav-bar">
                 <li><a href="index.html">Início<span></span></a></li>
